umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@mdldraw_radiso.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule_lenient
category: molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidIsotopeMass
    message: Invalid isotope mass 18 for element Na
molecule_lenient:
  success: true
  summary:
    sum_formula: C6Na3
    atom_count: 9
    bond_count: 9
    property_count: 0
extended_molecule:
  success: false
  error:
    error_type: InvalidIsotopeMass
    message: Invalid isotope mass 18 for element Na
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C6Na3
    atom_count: 9
    bond_count: 9
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
